--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".autentication.LoginActivity">
+    tools:context=".autentication.CadastroActivity"
+    android:background="@color/white">
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -21,108 +21,108 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+
             <include
                 android:id="@+id/btn_voltar"
                 layout="@layout/ib_voltar"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginStart="24dp"
+                android:layout_marginTop="4dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-
-            <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/ic_logo"
+            <EditText
+                android:id="@+id/editNome"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="24dp"
+                android:background="@drawable/bg_edit_off"
+                android:drawableStart="@drawable/ic_email_off"
+                android:drawablePadding="16dp"
+                android:hint="Nome"
+                android:inputType="textEmailAddress"
+                android:padding="16dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                app:layout_constraintBottom_toTopOf="@+id/editEmail"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/btn_voltar"
+                app:layout_constraintVertical_chainStyle="packed" />
 
             <EditText
                 android:id="@+id/editEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="24dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
                 android:background="@drawable/bg_edit_off"
                 android:drawableStart="@drawable/ic_email_off"
-                android:layout_marginHorizontal="24dp"
                 android:drawablePadding="16dp"
                 android:hint="Email"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black"
                 android:inputType="textEmailAddress"
                 android:padding="16dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
                 app:layout_constraintBottom_toTopOf="@+id/editSenha"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="packed" />
+                app:layout_constraintTop_toBottomOf="@+id/editNome" />
 
             <EditText
                 android:id="@+id/editSenha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="24dp"
+                android:layout_marginBottom="24dp"
                 android:background="@drawable/bg_edit_off"
                 android:drawableStart="@drawable/ic_senha_off"
                 android:drawablePadding="16dp"
                 android:hint="Senha"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black"
-                android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="24dp"
                 android:inputType="textPassword"
                 android:padding="16dp"
-                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                app:layout_constraintBottom_toTopOf="@+id/editConfirmSenha"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editEmail" />
 
-             <android.widget.Button
-                android:id="@+id/btnLogin"
+            <EditText
+                android:id="@+id/editConfirmSenha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_btn"
-                android:text="Login"
                 android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="24dp"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toTopOf="@+id/progressBar"
+                android:layout_marginBottom="24dp"
+                android:background="@drawable/bg_edit_off"
+                android:drawableStart="@drawable/ic_senha_off"
+                android:drawablePadding="16dp"
+                android:hint="Confrimar a Senha"
+                android:inputType="textPassword"
+                android:padding="16dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editSenha" />
 
 
-            <TextView
-                android:id="@+id/btnrecuperarSenha"
-                android:layout_width="wrap_content"
+            <android.widget.Button
+                android:id="@+id/btnLogin"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
-                android:text="Recuperar senha"
-                android:textColor="@color/black"
-                android:textSize="15dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
-
-            <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:indeterminateTint="@color/color_laranja"
-                android:layout_marginTop="8dp"
-                android:visibility="gone"
-                tools:visibility="visible"
+                android:layout_marginHorizontal="24dp"
+                android:background="@drawable/bg_btn"
+                android:text="Cadastrar"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
                 app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
+                app:layout_constraintTop_toBottomOf="@+id/editConfirmSenha" />
 
             <LinearLayout
                 android:id="@+id/linearLayout"
@@ -138,9 +138,9 @@
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Nâo tem conta?"
-                    tools:layout_editor_absoluteX="24dp"
+                    android:text="Já possui conta?"
                     android:textColor="@color/black"
+                    tools:layout_editor_absoluteX="24dp"
                     tools:layout_editor_absoluteY="659dp" />
 
                 <TextView
@@ -149,7 +149,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:paddingVertical="16dp"
-                    android:text="Inscreva-se"
+                    android:text="Fazer Login"
                     android:textColor="@color/color_laranja"
                     tools:layout_editor_absoluteX="196dp"
                     tools:layout_editor_absoluteY="659dp" />
@@ -158,10 +158,9 @@
             </LinearLayout>
 
 
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
