--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,6 +69,7 @@
                 android:drawableStart="@drawable/ic_senha_off"
                 android:drawablePadding="16dp"
                 android:hint="Senha"
+                android:imeOptions="actionSend"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:layout_marginHorizontal="24dp"
