--- a/app/src/main/res/layout/activity_main_usuario.xml
+++ b/app/src/main/res/layout/activity_main_usuario.xml
@@ -33,5 +33,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <Button
+        android:id="@+id/button_Login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="147dp"
+        tools:layout_editor_absoluteY="259dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
