--- a/app/src/main/res/layout/activity_main_empresa.xml
+++ b/app/src/main/res/layout/activity_main_empresa.xml
@@ -4,20 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.loja.MainActivityEmpresa">
+    tools:context=".activity.loja.MainActivityEmpresa"
+    android:background="@color/neve">
 
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/nav_host_fragment"
+        android:id="@+id/nav_host_fragment_empresa"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        app:defaultNavHost = "true"
-        app:navGraph="@navigation/nav_graph_empresa"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="60dp"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toTopOf="@+id/BottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout="@layout/fragment_usuario_home" />
+        app:navGraph="@navigation/nav_graph_empresa" />
 
 
 
