--- a/app/src/main/res/layout/activity_main_usuario.xml
+++ b/app/src/main/res/layout/activity_main_usuario.xml
@@ -4,24 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/neve"
     tools:context=".activity.usuario.MainActivityUsuario">
 
 
     <androidx.fragment.app.FragmentContainerView
 
         android:id="@+id/nav_host_fragment"
+
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@+id/BottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/nav_graph_usuario"
-        />
+        app:layout_constraintVertical_bias="0.0"
+        app:navGraph="@navigation/nav_graph_usuario" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/BottomNavigationView"
