--- a/app/src/main/res/navigation/nav_graph_empresa.xml
+++ b/app/src/main/res/navigation/nav_graph_empresa.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph_empresa"
-    app:startDestination="@id/menu_home">
+    app:startDestination="@id/menu_categorias">
 
     <fragment
         android:id="@+id/menu_categorias"
