--- a/app/src/main/res/layout/dialog_form_categoria.xml
+++ b/app/src/main/res/layout/dialog_form_categoria.xml
@@ -20,16 +20,17 @@
 
 
         <ImageView
+            android:id="@+id/imagemCategoria"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="8dp"
             android:background="@color/white"
+            android:padding="8dp"
             android:src="@drawable/placeholder_form_categorias" />
 
     </androidx.cardview.widget.CardView>
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/edtCategoria"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
@@ -42,7 +43,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/cbTodos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
@@ -51,7 +52,7 @@
         android:text="Todos Produtos"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/edtCategoria" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,7 +61,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox">
+        app:layout_constraintTop_toBottomOf="@+id/cbTodos">
 
         <android.widget.Button
             android:id="@+id/btn_fechar"
